Bug 1033398 - Ensure we request composites while overscroll is being reduced by touch input. r=drs